# idd

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  ruff.toml
.claude-plugin/: marketplace.json  plugin.json
.forge/: config.json  conventions.json
.github/workflows/: ci.yml
commands/: amend-constitution.md  crucible.md  do.md  domain.md  execute.md  lesson.md  next.md  plan.md  qa.md  refine.md  research.md  review.md  scenarios.md  ship.md  spec.md  status.md  validate.md  verify.md
docs/test-plans/: m8-test-baseline.tsv
hooks/: check_budget.py  check_conventions.py  check_state_writer.py  hooks.json
schemas/: budget.schema.json  capability-spec-frontmatter.schema.json  constitution-frontmatter.schema.json  conventions.schema.json  cross-ai-config.schema.json  delta-proposal-frontmatter.schema.json  frontmatter.schema.json  git-conventions-config.schema.json  plan-frontmatter.schema.json  research-config.schema.json  research-frontmatter.schema.json  review-frontmatter.schema.json  spec-frontmatter.schema.json  state.schema.json  understanding-frontmatter.schema.json
skills/: _meta.json
skills/forge-amend-constitution/: SKILL.md
skills/forge-bootstrap-constitution/: SKILL.md
skills/forge-constitution/: SKILL.md
skills/forge-context-budget/: SKILL.md
skills/forge-crucible/: SKILL.md
skills/forge-do/: SKILL.md
skills/forge-domain/: SKILL.md
skills/forge-execute/: SKILL.md
skills/forge-lesson/: SKILL.md
skills/forge-next/: SKILL.md
skills/forge-plan/: SKILL.md
skills/forge-qa/: SKILL.md
skills/forge-refine/: SKILL.md
skills/forge-research/: SKILL.md
skills/forge-resync-agents/: SKILL.md
skills/forge-review/: SKILL.md
skills/forge-scenarios/: SKILL.md
skills/forge-ship/: SKILL.md
skills/forge-spec/: SKILL.md
skills/forge-status/: SKILL.md
skills/forge-subagent-dispatch/: SKILL.md
skills/forge-tdd/: SKILL.md
skills/forge-validate/: SKILL.md
skills/forge-verify/: SKILL.md
skills/idd-amend-constitution/: SKILL.md
skills/idd-constitution/: SKILL.md
skills/idd-context-budget/: SKILL.md
skills/idd-crucible/: SKILL.md
skills/idd-execute/: SKILL.md
skills/idd-next/: SKILL.md
skills/idd-plan/: SKILL.md
skills/idd-review/: SKILL.md
skills/idd-scenarios/: SKILL.md
skills/idd-ship/: SKILL.md
skills/idd-spec/: SKILL.md
skills/idd-status/: SKILL.md
skills/idd-subagent-dispatch/: SKILL.md
skills/idd-validate/: SKILL.md
skills/idd-verify/: SKILL.md
templates/capability/: SPEC.md
templates/changes/: proposal.md
templates/constitution/: CONSTITUTION.md
templates/feature/: DOMAIN.md  PLAN.md  QA.md  RESEARCH.md  REVIEW.md  SPEC.md  UNDERSTANDING.md  decisions.md
templates/intel/: lessons.md
tests/: conftest.py
tests/_baselines/: coverage.txt
tests/_helpers/: state_fixtures.py
tests/docs/: test_docs_drift.py
tests/integration/: test_constitution_bootstrap_e2e.py  test_git_conventions_real_git.py  test_qa_hardening_seams.py
tests/plugin/: test_plugin_loads.py
tests/readme/: test_readme_examples_match_schema.py  test_spec_existing_feature_preserves_started_at.py  test_spec_headless_refusal.py
tests/regression/: test_agents_md_research_row.py  test_commands_research_md.py  test_commands_review_md.py  test_do_skill_parity.py  (+32 more)
tools/: __init__.py  _glob.py  _relevance.py  _repo_root.py  archive.py  bdd_detect.py  check_coverage_floor.py  check_schemas.py  constitution.py  constitution_amend.py  conventions_runtime.py  delta_merge.py  feature_log.py  lint_frontmatter.py  redaction.py  routing.py  ship_gate.py  state.py  state_cli.py  status_report.py  validate.py
(+404 files in other folders)
