[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "idd-tools"
version = "0.1.0"
description = "Tooling for the IDD Claude Code plugin: state machinery + frontmatter linter + schema checker."
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.21",
    "rfc3339-validator>=0.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
idd-lint-frontmatter = "tools.lint_frontmatter:main"
idd-check-schemas = "tools.check_schemas:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
