[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-tools"
version = "0.1.0"
description = "Tooling for the FORGE Claude Code plugin: state machinery + frontmatter linter + schema checker."
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.21",
  "rfc3339-validator>=0.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15.0",
  "mypy>=1.20.0",
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "types-PyYAML",
  "types-jsonschema",
]

[project.scripts]
forge-check-schemas = "tools.check_schemas:main"
forge-do = "tools.do_cli:main"
forge-lint-frontmatter = "tools.lint_frontmatter:main"
forge-state = "tools.state_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = [
  "ARG",    # flake8-unused-arguments
  "F",      # pyflakes
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "ERA",    # flake8-eradicate (commented-out code)
  "FURB",   # refurb
  "I",      # isort
  "N",      # pep8-naming
  "UP",     # pyupgrade
  "D",      # pydocstyle
  "B",      # flake8-bugbear
  "A",      # flake8-builtins
  "SIM",    # flake8-simplify
  "RUF",    # ruff-specific
  "S",      # flake8-bandit (security)
  "C4",     # flake8-comprehensions
  "PIE",    # flake8-pie
  "PTH",    # flake8-use-pathlib
  "PL",     # pylint
  "PERF",   # perflint
]
ignore = [
  "E501",    # line length handled by formatter
  "D107",    # missing-docstring-in-__init__ (documented in class docstring)
  "S603",    # subprocess-without-shell-check (we use shell=False intentionally)
  "S607",    # start-process-with-partial-path (common binaries expected in PATH)
  "PLR0913", # too-many-arguments
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests legitimately need asserts, magic numbers, and loose docstring discipline.
"tests/**" = ["D", "S101", "PLR2004", "ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_context = true
show_error_codes = true
warn_unreachable = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = true
namespace_packages = true
explicit_package_bases = true
files = ["tools", "tests", "hooks"]
exclude = ["tests/fixtures"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "unit: fast, isolated",
  "smoke: end-to-end against fixture",
]

[tool.coverage.run]
source = ["tools"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
